Marketplace Plugin preparations (for AI)

--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ subprojects {
 
     apply plugin: 'org.jetbrains.intellij'
 
-    version '193.2.1'
+    version '193.3.0.dev'
     sourceCompatibility = 1.8
 
     repositories {
@@ -67,6 +67,17 @@ subprojects {
 
     task runIC_193_5662(type: RunIdeTask){
         ideDirectory 'C:\\Users\\artem\\AppData\\Local\\JetBrains\\Toolbox\\apps\\IDEA-C\\ch-1\\193.5662.53'
+    }
+
+    task CopyPlugins(type: Copy) {
+        dependsOn(prepareSandbox)
+        from "${intellij.sandboxDirectory}/plugins_to_add"
+        into "${intellij.sandboxDirectory}/plugins"
+    }
+
+    task run_AI_4_193(type: RunIdeTask){
+        ideDirectory 'C:\\Users\\artem\\AppData\\Local\\JetBrains\\Toolbox\\apps\\AndroidStudio\\ch-0\\193.6085562'
+        dependsOn(CopyPlugins)
     }
 
 /*
