--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ subprojects {
 
     apply plugin: 'org.jetbrains.intellij'
 
-    version '193.3.2.dev'
+    version '193.3.2'
     sourceCompatibility = 1.8
 
     repositories {
