--- a/simple-highlighter/src/main/resources/META-INF/plugin.xml
+++ b/simple-highlighter/src/main/resources/META-INF/plugin.xml
@@ -23,12 +23,17 @@
           &emsp; * Filtering by Functions, Macros, Variables and Sorting alphabetical; <br>
           &emsp; * Navigation in both directions (Structure View &lt;-> Editor). <br>
      - Quick Documentation for CMake commands, modules, policies, properties, and variables. <br>
-     - Syntax and Operation inspections. <br><br>
+     - Syntax and Operation inspections: <br>
+          &emsp; * Variable is set but never used; <br>
+          &emsp; * Builtin commands should be used in lowercase; <br>
+          &emsp; * End-of-block commands (else, endif, etc.) should not take arguments. <br>
+      <br>
 
 
 ]]></description>
 
   <change-notes><![CDATA[
+      201.1.1 - Some bug fixes and optimisations. <br>
       201.0.1 - Experimental support of IntelliJ IDEA 2020.1. <br>
       193.3.2 - bug fix: added(improved) case-insensitivity for commands, modules and boolean constants. <br>
       193.3.1 - Update to Cmake 3.16.2 for predefined commands, modules, policies, properties, variables. <br>
