--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ subprojects {
 
     apply plugin: 'org.jetbrains.intellij'
 
-    version '201.1.2'
+    version '202.0.1'
     sourceCompatibility = 1.8
 
     repositories {
@@ -41,16 +41,16 @@ subprojects {
     intellij {
         pluginName "$rootProject.name-$project.name"
 //        localPath 'C:\\Users\\artem\\AppData\\Local\\JetBrains\\Toolbox\\apps\\IDEA-C\\ch-0\\193.6015.39'
-        localPath 'C:\\Users\\artem\\AppData\\Local\\JetBrains\\Toolbox\\apps\\IDEA-C\\ch-1\\201.5616.10'
+        localPath 'C:\\Users\\artem\\AppData\\Local\\JetBrains\\Toolbox\\apps\\IDEA-C\\ch-0\\202.5958.24'
         downloadSources false
 //        plugins += 'PsiViewer:193-SNAPSHOT'
-        plugins += 'PsiViewer:201-SNAPSHOT'
+        plugins += 'PsiViewer:202-SNAPSHOT'
         plugins += 'java'
         sameSinceUntilBuild true
     }
 
     patchPluginXml.sinceBuild 193.5662
-    patchPluginXml.untilBuild 202
+    patchPluginXml.untilBuild 203
 
     jar {
         archivesBaseName = intellij.pluginName
@@ -61,15 +61,28 @@ subprojects {
     }
 
     task runCLion_193(type: RunIdeTask){
+        jbrVersion '11_0_4b304.69'
         ideDirectory 'C:\\Users\\artem\\AppData\\Local\\JetBrains\\Toolbox\\apps\\CLion\\ch-0\\193.6494.38'
     }
 
     task runCLion_201(type: RunIdeTask){
-        ideDirectory 'C:\\Users\\artem\\AppData\\Local\\JetBrains\\Toolbox\\apps\\CLion\\ch-1\\201.5616.31'
+        jbrVersion '11_0_4b304.69'
+        ideDirectory 'C:\\Users\\artem\\AppData\\Local\\JetBrains\\Toolbox\\apps\\CLion\\ch-0\\201.7846.88'
+    }
+
+    task runCLion_202(type: RunIdeTask){
+        jbrVersion '11_0_4b304.69'
+        ideDirectory 'C:\\Users\\artem\\AppData\\Local\\JetBrains\\Toolbox\\apps\\CLion\\ch-1\\202.5792.50'
     }
 
     task runIC_201(type: RunIdeTask){
-        ideDirectory 'C:\\Users\\artem\\AppData\\Local\\JetBrains\\Toolbox\\apps\\IDEA-C\\ch-1\\201.5616.10'
+        jbrVersion '11_0_4b304.69'
+        ideDirectory 'C:\\Users\\artem\\AppData\\Local\\JetBrains\\Toolbox\\apps\\IDEA-C\\ch-1\\201.7846.76'
+    }
+
+    task runIC_202(type: RunIdeTask){
+        jbrVersion '11_0_4b304.69'
+        ideDirectory 'C:\\Users\\artem\\AppData\\Local\\JetBrains\\Toolbox\\apps\\IDEA-C\\ch-0\\202.5958.24'
     }
 
     task runUltimate_193(type: RunIdeTask){
