--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ subprojects {
 
     apply plugin: 'org.jetbrains.intellij'
 
-    version '202.0.1'
+    version '202.0.2_EAP'
     sourceCompatibility = 1.8
 
     repositories {
@@ -72,7 +72,7 @@ subprojects {
 
     task runCLion_202(type: RunIdeTask){
         jbrVersion '11_0_4b304.69'
-        ideDirectory 'C:\\Users\\artem\\AppData\\Local\\JetBrains\\Toolbox\\apps\\CLion\\ch-1\\202.5792.50'
+        ideDirectory 'C:\\Users\\artem\\AppData\\Local\\JetBrains\\Toolbox\\apps\\CLion\\ch-1\\202.6109.21'
     }
 
     task runIC_201(type: RunIdeTask){
