--- a/plus/src/main/resources/META-INF/plugin.xml
+++ b/plus/src/main/resources/META-INF/plugin.xml
@@ -40,6 +40,7 @@
 ]]></description>
 
   <change-notes><![CDATA[
+      202.0.2 - fix (workaround) <a href="https://github.com/ArtsiomCh/CMake/issues/18">issue</a> with exception due to <a href="https://youtrack.jetbrains.com/issue/IDEA-243988">IDEA-243988</a> <br>
       202.0.1 - Compatibility with 2020.2 <br>
       201.1.2 - fix: large bracket comment cause [almost] infinite Loading file state. <a href="https://github.com/ArtsiomCh/CMake/issues/15">issue</a> <br>
       201.1.1 - Inspections by Daniel Pfeifer suggestions added (see and take part in the <a href="https://github.com/ArtsiomCh/CMake/issues/11">discussion</a> for more details): <br>
@@ -109,9 +110,12 @@
     <completion.contributor language="CMake" implementationClass="com.cmakeplugin.CMakeVariableCompletionContributor" order="first"/>
     <lang.documentationProvider implementationClass="com.cmakeplugin.CMakeDocProvider" language="CMake" order="first" />
 
+    <lang.refactoringSupport language="CMake" implementationClass="com.cmakeplugin.CMakeRefactoringSupportProvider" />
+<!--
     <lang.refactoringSupport language="CMake"
                              factoryArgument="refactoringSupport"
                              factoryClass="com.cmakeplugin.CMakePlusExtensionFactory"  />
+-->
 
 <!--
     <localInspection language="CMake"
