--- a/simple-highlighter/src/main/resources/META-INF/plugin.xml
+++ b/simple-highlighter/src/main/resources/META-INF/plugin.xml
@@ -33,6 +33,7 @@
 ]]></description>
 
   <change-notes><![CDATA[
+      203.0.1 - Compatibility with 2020.3 <br>
       202.0.1 - Compatibility with 2020.2 <br>
       201.1.2 - fix: long bracket comment markup could break lexer. <br>
       201.1.1 - Some bug fixes and optimisations. <br>
